# aliyun_acp_learning

./: .gitignore  .python-version  main.py  pyproject.toml  release_notes.md  requirements.txt
.trae/rules/: project_rules.md
.trae/skills/code-generator/: SKILL.md
.trae/skills/uv-dependency-manager/: SKILL.md
LLM_ACP_EN/p2_Build LLM Q&A System/: 2_5_Optimize_RAG_Application_to_Improve_QA_Accuracy.ipynb
app/: README.md  config.py  custom_llm.py  factory.py  logger.py  main_ollama_ragas.py  ollama_client.py  ollama_embeddings.py  ragas_evaluate.py  ragas_evaluate_zh.py  ragas_ollama_wrapper.py  ragas_test.py  ragas_test_ollama.py  simple_ragas_test.py  test_ai_judge_optimization.py  test_components.py  test_ollama.py  utils.py
utils/: ollama_client.py
大模型ACP认证教程/p2_构造大模型问答系统/: 2_1_用大模型构建新人答疑机器人.ipynb  2_2_扩展答疑机器人的知识范围.ipynb  2_3_优化提示词改善答疑机器人回答质量.ipynb  2_4_自动化评测答疑机器人的表现.ipynb  2_5_优化RAG应用提升问答准确度.ipynb  2_6_构建Agent完成复杂任务.ipynb  2_8_部署模型.ipynb  2_9_大模型应用生产实践.ipynb  2_A_大模型应用安全合规.ipynb
大模型ACP认证教程/p2_构造大模型问答系统/chatbot/: openai_like.py
大模型ACP认证教程/p2_构造大模型问答系统/config/: load_key.py
大模型ACP认证教程/p3_总结与展望/: 3_0_总结与展望.ipynb  README.md
