[project]
name = "aliyun-acp-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "agentscope==1.0.6",
    "alibabacloud-bailian20231229==1.8.2",
    "alibabacloud-green20220302==2.21.2",
    "dashscope==1.22.2",
    "datasets>=4.5.0",
    "docx2txt==0.9",
    "faiss-cpu==1.13.0",
    "fastapi==0.123.8",
    "gradio==3.36.1",
    "httpx==0.27.1",
    "ipykernel>=7.1.0",
    "ipywidgets==8.1.7",
    "lagent==0.1.2",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.80",
    "langchain-openai==0.3.29",
    "langchain-text-splitters==0.3.11",
    "llama-index-core==0.12.52.post1",
    "llama-index-embeddings-dashscope==0.3.0",
    "llama-index-embeddings-openai-like==0.2.0",
    "llama-index-llms-dashscope==0.4.1",
    "llama-index-llms-openai-like==0.4.0",
    "llama-index-readers-dashscope==0.3.0",
    "llama-index-readers-file==0.4.11",
    "llama-index-vector-stores-faiss==0.4.0",
    "matplotlib==3.10.7",
    "mem0ai==0.1.118",
    "mmengine==0.10.3",
    "modelscope==1.18.1",
    "ollama>=0.6.1",
    "openai==1.90.0",
    "openpyxl==3.1.5",
    "oss2==2.19.0",
    "pandas==2.2.3",
    "pyarrow>=23.0.0",
    "pymupdf4llm==0.2.6",
    "ragas==0.1.9",
    "seaborn==0.13.2",
    "simplejson==3.19.3",
    "tqdm>=4.67.3",
    "uvicorn==0.31.1"
]
